src/query/ast/tests/it/testdata/statement-error.txt
---------- Input ----------
create table a.b (c integer not null 1, b float(10))
---------- Output ---------
error: 
  --> SQL:1:38
  |
1 | create table a.b (c integer not null 1, b float(10))
  | ------                               ^ unexpected `1`, expected `)`, `NULL`, `NOT`, `DEFAULT`, `GENERATED`, `AS`, `COMMENT`, or `,`
  | |                                     
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
create table a (c float(10))
---------- Output ---------
error: 
  --> SQL:1:24
  |
1 | create table a (c float(10))
  | ------                 ^ unexpected `(`, expected `)`, `NULL`, `NOT`, `DEFAULT`, `GENERATED`, `AS`, `COMMENT`, or `,`
  | |                       
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
create table a (c varch)
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | create table a (c varch)
  | ------          - ^^^^^ unexpected `varch`, expected `VARCHAR`, `CHAR`, `VARIANT`, `CHARACTER`, `VARBINARY`, `ARRAY`, `BINARY`, `MAP`, `DATE`, `STRING`, `FLOAT32`, `FLOAT64`, `DECIMAL`, `SMALLINT`, `DATETIME`, `NULLABLE`, `BOOLEAN`, `BOOL`, `UINT8`, `TINYINT`, `UINT16`, `UINT32`, `INT`, `INTEGER`, `UINT64`, `UNSIGNED`, `BIGINT`, `INT8`, `INT16`, `INT32`, `INT64`, `SIGNED`, `FLOAT`, `DOUBLE`, `BITMAP`, `TUPLE`, `TIMESTAMP`, `TEXT`, or `JSON`
  | |               |  
  | |               while parsing `<column name> <type> [DEFAULT <expr>] [AS (<expr>) VIRTUAL] [AS (<expr>) STORED] [COMMENT '<comment>']`
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
create table a (c tuple())
---------- Output ---------
error: 
  --> SQL:1:25
  |
1 | create table a (c tuple())
  | ------          - ----- ^ unexpected `)`, expected `BOOLEAN`, `BOOL`, `UINT8`, `TINYINT`, `UINT16`, `SMALLINT`, `UINT32`, `INT`, `INTEGER`, `UINT64`, `UNSIGNED`, `BIGINT`, `INT8`, `INT16`, `INT32`, `INT64`, `SIGNED`, `FLOAT32`, `FLOAT`, `FLOAT64`, `DOUBLE`, `DECIMAL`, `ARRAY`, `MAP`, `BITMAP`, `TUPLE`, `DATE`, `DATETIME`, `TIMESTAMP`, `STRING`, `VARCHAR`, `CHAR`, `CHARACTER`, `TEXT`, `BINARY`, `VARBINARY`, `VARIANT`, `JSON`, `NULLABLE`, <Ident>, or <QuotedString>
  | |               | |      
  | |               | while parsing type name
  | |               while parsing `<column name> <type> [DEFAULT <expr>] [AS (<expr>) VIRTUAL] [AS (<expr>) STORED] [COMMENT '<comment>']`
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
create table a (c decimal)
---------- Output ---------
error: 
  --> SQL:1:26
  |
1 | create table a (c decimal)
  | ------          - -------^ unexpected `)`, expected `(`
  | |               | |       
  | |               | while parsing type name
  | |               while parsing `<column name> <type> [DEFAULT <expr>] [AS (<expr>) VIRTUAL] [AS (<expr>) STORED] [COMMENT '<comment>']`
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
create table a (b tuple(c int, uint64));
---------- Output ---------
error: 
  --> SQL:1:38
  |
1 | create table a (b tuple(c int, uint64));
  | ------          - -----              ^ unexpected `)`, expected `BOOLEAN`, `BOOL`, `UINT8`, `TINYINT`, `UINT16`, `SMALLINT`, `UINT32`, `INT`, `INTEGER`, `UINT64`, `UNSIGNED`, `BIGINT`, `INT8`, `INT16`, `INT32`, `INT64`, `SIGNED`, `FLOAT32`, `FLOAT`, `FLOAT64`, `DOUBLE`, `DECIMAL`, `ARRAY`, `MAP`, `BITMAP`, `TUPLE`, `DATE`, `DATETIME`, `TIMESTAMP`, `STRING`, `VARCHAR`, `CHAR`, `CHARACTER`, `TEXT`, `BINARY`, `VARBINARY`, `VARIANT`, `JSON`, or `NULLABLE`
  | |               | |                   
  | |               | while parsing TUPLE(<name> <type>, ...)
  | |               | while parsing type name
  | |               while parsing `<column name> <type> [DEFAULT <expr>] [AS (<expr>) VIRTUAL] [AS (<expr>) STORED] [COMMENT '<comment>']`
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
CREATE TABLE t(c1 NULLABLE(int) NOT NULL);
---------- Output ---------
error: 
  --> SQL:1:41
  |
1 | CREATE TABLE t(c1 NULLABLE(int) NOT NULL);
  | ------                                  ^ ambiguous NOT NULL constraint
  | |                                        
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
drop table if a.b
---------- Output ---------
error: 
  --> SQL:1:15
  |
1 | drop table if a.b
  | ----          ^ unexpected `a`, expected `EXISTS`
  | |              
  | while parsing `DROP TABLE [IF EXISTS] [<database>.]<table>`


---------- Input ----------
truncate table a.b.c.d
---------- Output ---------
error: 
  --> SQL:1:21
  |
1 | truncate table a.b.c.d
  |                     ^ unexpected `.`, expected `FORMAT` or `;`


---------- Input ----------
truncate a
---------- Output ---------
error: 
  --> SQL:1:10
  |
1 | truncate a
  | -------- ^ unexpected `a`, expected `TABLE`
  | |         
  | while parsing `TRUNCATE TABLE [<database>.]<table>`


---------- Input ----------
drop a
---------- Output ---------
error: 
  --> SQL:1:6
  |
1 | drop a
  |      ^ unexpected `a`, expected `TASK`, `TABLE`, `MASKING`, `CATALOG`, `DATABASE`, `AGGREGATING`, `SCHEMA`, `NETWORK`, `VIEW`, `VIRTUAL`, `USER`, `ROLE`, `FUNCTION`, `STAGE`, `FILE`, or `SHARE`


---------- Input ----------
insert into t format
---------- Output ---------
error: 
  --> SQL:1:21
  |
1 | insert into t format
  | ------              ^ unexpected ``, expected <Ident> or <QuotedString>
  | |                   
  | while parsing `INSERT INTO [TABLE] <table> [(<column>, ...)] (FORMAT <format> | VALUES <values> | <query>)`


---------- Input ----------
show tables format
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | show tables format
  |                   ^ unexpected ``, expected <Ident> or <QuotedString>


---------- Input ----------
alter database system x rename to db
---------- Output ---------
error: 
  --> SQL:1:23
  |
1 | alter database system x rename to db
  | -----                 ^ unexpected `x`, expected `RENAME` or `.`
  | |                      
  | while parsing `ALTER DATABASE [IF EXISTS] <action>`


---------- Input ----------
create user 'test-e' identified bi 'password';
---------- Output ---------
error: 
  --> SQL:1:33
  |
1 | create user 'test-e' identified bi 'password';
  |                                 ^^ unexpected `bi`, expected `BY`, `WITH`, `FORMAT`, or `;`


---------- Input ----------
create user 'test-e'@'localhost' identified by 'password';
---------- Output ---------
error: 
  --> SQL:1:22
  |
1 | create user 'test-e'@'localhost' identified by 'password';
  | ------               ^^^^^^^^^^^ unexpected `'localhost'`, expected `'%'` or `IDENTIFIED`
  | |                     
  | while parsing `CREATE USER [IF NOT EXISTS] '<username>'@'hostname' IDENTIFIED [WITH <auth_type>] [BY <password>] [WITH <user_option>, ...]`


---------- Input ----------
drop usar if exists 'test-j';
---------- Output ---------
error: 
  --> SQL:1:6
  |
1 | drop usar if exists 'test-j';
  |      ^^^^ unexpected `usar`, expected `USER`, `SHARE`, `STAGE`, `AGGREGATING`, `ROLE`, `TABLE`, `SCHEMA`, `NETWORK`, `VIRTUAL`, `CATALOG`, `DATABASE`, `FUNCTION`, `TASK`, `MASKING`, `VIEW`, or `FILE`


---------- Input ----------
alter user 'test-e' identifies by 'new-password';
---------- Output ---------
error: 
  --> SQL:1:21
  |
1 | alter user 'test-e' identifies by 'new-password';
  |                     ^^^^^^^^^^ unexpected `identifies`, expected `IDENTIFIED`, `WITH`, `FORMAT`, `@`, or `;`


---------- Input ----------
create role 'test'@'%';
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | create role 'test'@'%';
  |                   ^ unexpected `@`, expected `FORMAT` or `;`


---------- Input ----------
drop role 'test'@'%';
---------- Output ---------
error: 
  --> SQL:1:17
  |
1 | drop role 'test'@'%';
  |                 ^ unexpected `@`, expected `FORMAT` or `;`


---------- Input ----------
SHOW GRANT FOR ROLE 'role1';
---------- Output ---------
error: 
  --> SQL:1:6
  |
1 | SHOW GRANT FOR ROLE 'role1';
  |      ^^^^^ unexpected `GRANT`, expected `GRANTS`, `CREATE`, `NETWORK`, `CATALOGS`, `FUNCTIONS`, `DATABASES`, `TABLE_FUNCTIONS`, `DROP`, `TABLE`, `ROLES`, `SHARE`, `TASKS`, `INDEXES`, `COLUMNS`, `PROCESSLIST`, `STAGES`, `TABLES`, `SHARES`, `ENGINES`, `METRICS`, `SETTINGS`, `SCHEMAS`, `FIELDS`, `USERS`, `FILE`, or `FULL`


---------- Input ----------
GRANT ROLE 'test' TO ROLE test-user;
---------- Output ---------
error: 
  --> SQL:1:31
  |
1 | GRANT ROLE 'test' TO ROLE test-user;
  |                               ^ unexpected `-`, expected `FORMAT` or `;`


---------- Input ----------
GRANT SELECT, ALL PRIVILEGES, CREATE ON * TO 'test-grant';
---------- Output ---------
error: 
  --> SQL:1:15
  |
1 | GRANT SELECT, ALL PRIVILEGES, CREATE ON * TO 'test-grant';
  | ----- ------  ^^^ unexpected `ALL`, expected `ALTER`, `SELECT`, `DELETE`, `USAGE`, `INSERT`, `UPDATE`, `SUPER`, `CREATE`, `DROP`, `GRANT`, `SET`, or `OWNERSHIP`
  | |     |        
  | |     while parsing <privileges> ON <privileges_level>
  | while parsing `GRANT { ROLE <role_name> | schemaObjectPrivileges | ALL [ PRIVILEGES ] ON <privileges_level> } TO { [ROLE <role_name>] | [USER] <user> }`


---------- Input ----------
GRANT SELECT, CREATE ON *.c TO 'test-grant';
---------- Output ---------
error: 
  --> SQL:1:27
  |
1 | GRANT SELECT, CREATE ON *.c TO 'test-grant';
  | -----                     ^ unexpected `c`, expected `TO` or `*`
  | |                          
  | while parsing `GRANT { ROLE <role_name> | schemaObjectPrivileges | ALL [ PRIVILEGES ] ON <privileges_level> } TO { [ROLE <role_name>] | [USER] <user> }`


---------- Input ----------
REVOKE SELECT, CREATE, ALL PRIVILEGES ON * FROM 'test-grant';
---------- Output ---------
error: 
  --> SQL:1:24
  |
1 | REVOKE SELECT, CREATE, ALL PRIVILEGES ON * FROM 'test-grant';
  | ------ ------          ^^^ unexpected `ALL`, expected `ALTER`, `SELECT`, `DELETE`, `USAGE`, `INSERT`, `UPDATE`, `SUPER`, `CREATE`, `DROP`, `GRANT`, `SET`, or `OWNERSHIP`
  | |      |                
  | |      while parsing <privileges> ON <privileges_level>
  | while parsing `REVOKE { ROLE <role_name> | schemaObjectPrivileges | ALL [ PRIVILEGES ] ON <privileges_level> } FROM { [ROLE <role_name>] | [USER] <user> }`


---------- Input ----------
REVOKE SELECT, CREATE ON * TO 'test-grant';
---------- Output ---------
error: 
  --> SQL:1:28
  |
1 | REVOKE SELECT, CREATE ON * TO 'test-grant';
  | ------                     ^^ unexpected `TO`, expected `FROM` or `.`
  | |                           
  | while parsing `REVOKE { ROLE <role_name> | schemaObjectPrivileges | ALL [ PRIVILEGES ] ON <privileges_level> } FROM { [ROLE <role_name>] | [USER] <user> }`


---------- Input ----------
COPY INTO mytable FROM 's3://bucket' CREDENTIAL = ();
---------- Output ---------
error: 
  --> SQL:1:38
  |
1 | COPY INTO mytable FROM 's3://bucket' CREDENTIAL = ();
  |                                      ^^^^^^^^^^ unexpected `CREDENTIAL`, expected `CREDENTIALS`, `DISABLE_VARIANT_CHECK`, `RETURN_FAILED_ONLY`, `CONNECTION`, `PURGE`, `VALIDATION_MODE`, `FORCE`, `LOCATION_PREFIX`, `FORMAT`, `PATTERN`, `FILES`, `MAX_FILES`, `SIZE_LIMIT`, `FILE_FORMAT`, `ON_ERROR`, `SPLIT_SIZE`, or `;`


---------- Input ----------
COPY INTO mytable FROM @mystage CREDENTIALS = ();
---------- Output ---------
error: 
  --> SQL:1:33
  |
1 | COPY INTO mytable FROM @mystage CREDENTIALS = ();
  |                                 ^^^^^^^^^^^ unexpected `CREDENTIALS`, expected `DISABLE_VARIANT_CHECK`, `RETURN_FAILED_ONLY`, `MAX_FILES`, `PURGE`, `VALIDATION_MODE`, `FORCE`, `FORMAT`, `PATTERN`, `FILES`, `SIZE_LIMIT`, `SPLIT_SIZE`, `FILE_FORMAT`, `ON_ERROR`, or `;`


---------- Input ----------
CALL system$test
---------- Output ---------
error: 
  --> SQL:1:17
  |
1 | CALL system$test
  | ----            ^ unexpected ``, expected `(`
  | |               
  | while parsing `CALL <procedure_name>(<parameter>, ...)`


---------- Input ----------
CALL system$test(a
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | CALL system$test(a
  | ----              ^ unexpected ``, expected `)` or `,`
  | |                 
  | while parsing `CALL <procedure_name>(<parameter>, ...)`


---------- Input ----------
show settings ilike 'enable%'
---------- Output ---------
error: 
  --> SQL:1:15
  |
1 | show settings ilike 'enable%'
  |               ^^^^^ unexpected `ilike`, expected `LIKE`, `LIMIT`, `WHERE`, `FORMAT`, or `;`


---------- Input ----------
PRESIGN INVALID @my_stage/path/to/file
---------- Output ---------
error: 
  --> SQL:1:9
  |
1 | PRESIGN INVALID @my_stage/path/to/file
  | ------- ^^^^^^^ unexpected `INVALID`, expected `DOWNLOAD`, `AtString`, `UPLOAD`, or <QuotedString>
  | |        
  | while parsing `PRESIGN [{DOWNLOAD | UPLOAD}] <location> [EXPIRE = 3600]`


---------- Input ----------
SELECT c a as b FROM t
---------- Output ---------
error: 
  --> SQL:1:12
  |
1 | SELECT c a as b FROM t
  |            ^^ unexpected `as`, expected `HAVING`, `SELECT`, `VALUES`, `OFFSET`, `,`, `FROM`, `WHERE`, `GROUP`, `WINDOW`, `(`, `WITH`, `UNION`, `EXCEPT`, `INTERSECT`, `ORDER`, `LIMIT`, `IGNORE_RESULT`, `FORMAT`, or `;`


---------- Input ----------
SELECT * FROM t GROUP BY GROUPING SETS a, b
---------- Output ---------
error: 
  --> SQL:1:35
  |
1 | SELECT * FROM t GROUP BY GROUPING SETS a, b
  |                                   ^^^^ unexpected `SETS`, expected `SELECT`, `INTERSECT`, `WITH`, `EXCEPT`, `VALUES`, `OFFSET`, `IGNORE_RESULT`, `,`, `HAVING`, `WINDOW`, `(`, `UNION`, `ORDER`, `LIMIT`, `FORMAT`, or `;`


---------- Input ----------
SELECT * FROM t GROUP BY GROUPING SETS ()
---------- Output ---------
error: 
  --> SQL:1:41
  |
1 | SELECT * FROM t GROUP BY GROUPING SETS ()
  | ------                                  ^ unexpected `)`, expected `(`, `IS`, `IN`, `EXISTS`, `BETWEEN`, `+`, `-`, `*`, `/`, `//`, `DIV`, `%`, `||`, `<->`, `>`, `<`, `>=`, `<=`, `=`, `<>`, `!=`, `^`, `AND`, `OR`, `XOR`, `LIKE`, `NOT`, `REGEXP`, `RLIKE`, `SOUNDS`, <BitWiseOr>, <BitWiseAnd>, <BitWiseXor>, <ShiftLeft>, <ShiftRight>, `->`, `->>`, `#>`, `#>>`, <Factorial>, <SquareRoot>, <BitWiseNot>, <CubeRoot>, <Abs>, `CAST`, `TRY_CAST`, `DATE_ADD`, `DATE_SUB`, `DATE_TRUNC`, `DATE`, `TIMESTAMP`, `INTERVAL`, `::`, `EXTRACT`, `DATE_PART`, `POSITION`, `SUBSTRING`, `SUBSTR`, `TRIM`, `COUNT`, or 19 more ...
  | |                                        
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb limit 10 order by bb;
---------- Output ---------
error: 
  --> SQL:1:30
  |
1 | select * from aa.bb limit 10 order by bb;
  | ------                       ^^^^^ ORDER BY must appear before LIMIT
  | |                             
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb offset 10 order by bb;
---------- Output ---------
error: 
  --> SQL:1:31
  |
1 | select * from aa.bb offset 10 order by bb;
  | ------                        ^^^^^ ORDER BY must appear before OFFSET
  | |                              
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb offset 10 limit 1;
---------- Output ---------
error: 
  --> SQL:1:31
  |
1 | select * from aa.bb offset 10 limit 1;
  | ------                        ^^^^^ LIMIT must appear before OFFSET
  | |                              
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb order by a order by b;
---------- Output ---------
error: 
  --> SQL:1:32
  |
1 | select * from aa.bb order by a order by b;
  | ------                         ^^^^^ duplicated ORDER BY clause
  | |                               
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb offset 10 offset 20;
---------- Output ---------
error: 
  --> SQL:1:31
  |
1 | select * from aa.bb offset 10 offset 20;
  | ------                        ^^^^^^ duplicated OFFSET clause
  | |                              
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb limit 10 limit 20;
---------- Output ---------
error: 
  --> SQL:1:30
  |
1 | select * from aa.bb limit 10 limit 20;
  | ------                       ^^^^^ duplicated LIMIT clause
  | |                             
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb limit 10,2 offset 2;
---------- Output ---------
error: 
  --> SQL:1:32
  |
1 | select * from aa.bb limit 10,2 offset 2;
  | ------                         ^^^^^^ LIMIT n,m should not appear OFFSET
  | |                               
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb limit 10,2,3;
---------- Output ---------
error: 
  --> SQL:1:21
  |
1 | select * from aa.bb limit 10,2,3;
  | ------              ^^^^^ [LIMIT n OFFSET m] or [LIMIT n,m]
  | |                    
  | while parsing `SELECT ...`


---------- Input ----------
with a as (select 1) with b as (select 2) select * from aa.bb;
---------- Output ---------
error: 
  --> SQL:1:43
  |
1 | with a as (select 1) with b as (select 2) select * from aa.bb;
  | ----                                      ^^^^^^ duplicated WITH clause
  | |                                          
  | while parsing `SELECT ...`


---------- Input ----------
copy into t1 from "" FILE
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | copy into t1 from "" FILE
  | ----              ^^ unexpected `""`, expected <QuotedString>, `AtString`, or `(`
  | |                  
  | while parsing `COPY
                INTO { [<database_name>.]<table_name> { ( <columns> ) } }
                FROM { internalStage | externalStage | externalLocation | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET | TSV } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`


---------- Input ----------
select $1 from @data/csv/books.csv (file_format => 'aa' bad_arg => 'x', pattern => 'bb')
---------- Output ---------
error: 
  --> SQL:1:57
  |
1 | select $1 from @data/csv/books.csv (file_format => 'aa' bad_arg => 'x', pattern => 'bb')
  | ------                                                  ^^^^^^^ unexpected `bad_arg`, expected `PATTERN`, `FILE_FORMAT`, `)`, `,`, `FILES`, or `CONNECTION`
  | |                                                        
  | while parsing `SELECT ...`


---------- Input ----------
copy into t1 from "" FILE_FORMAT
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | copy into t1 from "" FILE_FORMAT
  | ----              ^^ unexpected `""`, expected <QuotedString>, `AtString`, or `(`
  | |                  
  | while parsing `COPY
                INTO { [<database_name>.]<table_name> { ( <columns> ) } }
                FROM { internalStage | externalStage | externalLocation | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET | TSV } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`


---------- Input ----------
copy into t1 from "" FILE_FORMAT = 
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | copy into t1 from "" FILE_FORMAT = 
  | ----              ^^ unexpected `""`, expected <QuotedString>, `AtString`, or `(`
  | |                  
  | while parsing `COPY
                INTO { [<database_name>.]<table_name> { ( <columns> ) } }
                FROM { internalStage | externalStage | externalLocation | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET | TSV } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`


---------- Input ----------
copy into t1 from "" FILE_FORMAT = (
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | copy into t1 from "" FILE_FORMAT = (
  | ----              ^^ unexpected `""`, expected <QuotedString>, `AtString`, or `(`
  | |                  
  | while parsing `COPY
                INTO { [<database_name>.]<table_name> { ( <columns> ) } }
                FROM { internalStage | externalStage | externalLocation | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET | TSV } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`


---------- Input ----------
copy into t1 from "" FILE_FORMAT = (TYPE
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | copy into t1 from "" FILE_FORMAT = (TYPE
  | ----              ^^ unexpected `""`, expected <QuotedString>, `AtString`, or `(`
  | |                  
  | while parsing `COPY
                INTO { [<database_name>.]<table_name> { ( <columns> ) } }
                FROM { internalStage | externalStage | externalLocation | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET | TSV } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`


---------- Input ----------
copy into t1 from "" FILE_FORMAT = (TYPE =
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | copy into t1 from "" FILE_FORMAT = (TYPE =
  | ----              ^^ unexpected `""`, expected <QuotedString>, `AtString`, or `(`
  | |                  
  | while parsing `COPY
                INTO { [<database_name>.]<table_name> { ( <columns> ) } }
                FROM { internalStage | externalStage | externalLocation | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET | TSV } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`


---------- Input ----------
copy into t1 from "" FILE_FORMAT = (TYPE =
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | copy into t1 from "" FILE_FORMAT = (TYPE =
  | ----              ^^ unexpected `""`, expected <QuotedString>, `AtString`, or `(`
  | |                  
  | while parsing `COPY
                INTO { [<database_name>.]<table_name> { ( <columns> ) } }
                FROM { internalStage | externalStage | externalLocation | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET | TSV } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`


---------- Input ----------
COPY INTO t1 FROM "" PATTERN = '.*[.]csv' FILE_FORMAT = (type = TSV field_delimiter = '\t' skip_headerx = 0);
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | COPY INTO t1 FROM "" PATTERN = '.*[.]csv' FILE_FORMAT = (type = TSV field_delimiter = '\t' skip_headerx = 0);
  | ----              ^^ unexpected `""`, expected <QuotedString>, `AtString`, or `(`
  | |                  
  | while parsing `COPY
                INTO { [<database_name>.]<table_name> { ( <columns> ) } }
                FROM { internalStage | externalStage | externalLocation | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET | TSV } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`


---------- Input ----------
COPY INTO mytable
                FROM @my_stage
                FILE_FORMAT = (
                    type = CSV,
                    error_on_column_count_mismatch = 1
                )
---------- Output ---------
error: 
  --> SQL:5:54
  |
1 | COPY INTO mytable
  | ---- while parsing `COPY
                INTO { [<database_name>.]<table_name> { ( <columns> ) } }
                FROM { internalStage | externalStage | externalLocation | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET | TSV } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`
2 |                 FROM @my_stage
3 |                 FILE_FORMAT = (
4 |                     type = CSV,
5 |                     error_on_column_count_mismatch = 1
  |                                                      ^ unexpected `1`, expected `TRUE` or `FALSE`


